--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -64,17 +64,16 @@ jobs:
        env:
           GITHUB_USERNAME: danni-popova
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TLS_LABEL: traefik.http.routers.${{ github.event.repository.name }}.tls=true
+          HOST_LABEL: traefik.http.routers.${{ github.event.repository.name }}.rule=Host(`${{ secrets.DEV_HOSTNAME }}`) && PathPrefix(`/`)
+          CERT_LABEL: traefik.http.routers.${{ github.event.repository.name }}.tls.certresolver=letsencrypt
+          MIDDLEWARE_LABEL: traefik.http.routers.${{ github.event.repository.name }}.middlewares=https-redirect@docker
        with:
         host: ${{ secrets.DEV_DO_DROPLET_IP }}
         username: root
         key: ${{ secrets.ADMIN_SSH_KEY }}
+        envs: TSL_LABEL,HOST_LABEL,CERT_LABEL,MIDDLEWARE_LABEL
         script: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
           docker pull ${{ github.repository }}:latest
-          docker run -d \ 
-          --name ${{ github.event.repository.name }} ${{ github.repository }} \
-          --label "traefik.http.routers.${{ github.event.repository.name }}.rule=Host(`${{ secrets.DEV_HOSTNAME }}`) && PathPrefix(`/`)" \ 
-          --label "traefik.http.routers.${{ github.event.repository.name }}.tls=true" \ 
-          --label "traefik.http.routers.${{ github.event.repository.name }}.tls.certresolver=letsencrypt" \ 
-          --label "traefik.http.routers.${{ github.event.repository.name }}.middlewares=https-redirect@docker"
-    
+          docker run -d --name ${{ github.event.repository.name }} ${{ github.repository }} --label "$HOST_LABEL" --label "$TLS_LABEL" --label "$CERT_LABEL" --label "$MIDDLEWARE_LABEL"
