--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -76,4 +76,4 @@ jobs:
         script: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
           docker pull ${{ github.repository }}:latest
-          docker run -d --name ${{ github.event.repository.name }} ${{ github.repository }} --label "$HOST_LABEL" --label "$TLS_LABEL" --label "$CERT_LABEL" --label "$MIDDLEWARE_LABEL"
+          docker run -d --name ${{ github.event.repository.name }} --label "$HOST_LABEL" --label "$TLS_LABEL" --label "$CERT_LABEL" --label "$MIDDLEWARE_LABEL" ${{ github.repository }}
