--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -72,7 +72,7 @@ jobs:
         host: ${{ secrets.DEV_DO_DROPLET_IP }}
         username: root
         key: ${{ secrets.ADMIN_SSH_KEY }}
-        envs: TSL_LABEL,HOST_LABEL,CERT_LABEL,MIDDLEWARE_LABEL
+        envs: TLS_LABEL,HOST_LABEL,CERT_LABEL,MIDDLEWARE_LABEL
         script: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
           docker pull ${{ github.repository }}:latest
