--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -61,6 +61,7 @@ jobs:
      ## Send result to discord
   run:
    runs-on: ubuntu-latest
+   needs: [build]
    steps: 
           ## Run
       - 
