--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -77,7 +77,7 @@ jobs:
           CERT_LABEL: traefik.http.routers.${{ github.event.repository.name }}.tls.certresolver=letsencrypt
           ENABLE_LABEL: traefik.enable=true
        with:
-        host: ${{ secrets.DEV_DO_DROPLET_IP }}
+        host: ${{ secrets.DROPLET_IP }}
         username: root
         key: ${{ secrets.ADMIN_SSH_KEY }}
         envs:  HOST_LABEL,CERT_LABEL,TLS_LABEL
