--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -80,7 +80,7 @@ jobs:
         host: ${{ secrets.DROPLET_IP }}
         username: root
         key: ${{ secrets.ADMIN_SSH_KEY }}
-        envs:  HOST_LABEL,CERT_LABEL,TLS_LABEL
+        envs:  HOST_LABEL,CERT_LABEL,TLS_LABEL,ENABLE_LABEL
         script: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
           docker pull ${{ github.repository }}:latest
